Added minimal description of saphari robot with just the table.

--- a/saphari_robot_description/package.xml
+++ b/saphari_robot_description/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <package>
-  <name>saphari_final_review</name>
+  <name>saphari_robot_description</name>
   <version>0.0.1</version>
   <description>
-    Configurations, launch files, and source code for the final SAPHARI review.
+    Description of the robot used in the final review of the SAPHARI project.
   </description>
 
   <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
@@ -12,8 +12,12 @@
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <run_depend>xacro</run_depend>
+  <run_depend>rviz</run_depend>
+  <run_depend>robot_state_publisher</run_depend>
+  <run_depend>joint_state_publisher</run_depend>
 
   <export>
-    <metapackage/>
+
   </export>
 </package>
