--- a/saphari_robot_description/package.xml
+++ b/saphari_robot_description/package.xml
@@ -17,6 +17,8 @@
   <run_depend>robot_state_publisher</run_depend>
   <run_depend>joint_state_publisher</run_depend>
   <run_depend>iai_kuka_lwr4_description</run_depend>
+  <run_depend>iai_adapters_description</run_depend>
+  <run_depend>iai_wsg_50_description</run_depend>
 
   <export>
 
