--- a/saphari_final_review/package.xml
+++ b/saphari_final_review/package.xml
@@ -12,6 +12,8 @@
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <run_depend>saphari_robot_description</run_depend>
+  <run_depend>saphari_robot_bringup</run_depend>
 
   <export>
     <metapackage/>
