--- a/saphari_robot_bringup/package.xml
+++ b/saphari_robot_bringup/package.xml
@@ -16,6 +16,8 @@
   <run_depend>robot_state_publisher</run_depend>
   <run_depend>joint_state_publisher</run_depend>
   <run_depend>dlr_action_bridge</run_depend>
+  <run_depend>iai_wsg_50_description</run_depend>
+  <run_depend>loopback_controller_manager</run_depend>
 
   <export>
 
