Created package for task executive.

--- a/saphari_task_executive/package.xml
+++ b/saphari_task_executive/package.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0"?>
 <package>
-  <name>saphari_final_review</name>
+  <name>saphari_task_executive</name>
   <version>0.0.1</version>
   <description>
-    Configurations, launch files, and source code for the final SAPHARI review.
+    Source-code, launch-files, and config-files for the task executive
+    of the final year saphari review.
   </description>
 
   <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
@@ -12,11 +13,9 @@
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <run_depend>saphari_robot_description</run_depend>
-  <run_depend>saphari_robot_bringup</run_depend>
-  <run_depend>saphari_task_executive</run_depend>
+  <run_depend>semrec</run_depend>
 
   <export>
-    <metapackage/>
+
   </export>
 </package>
