Addded run-dep on saphari-tool-detector in metapackage.

--- a/saphari_final_review/package.xml
+++ b/saphari_final_review/package.xml
@@ -15,6 +15,7 @@
   <run_depend>saphari_robot_description</run_depend>
   <run_depend>saphari_robot_bringup</run_depend>
   <run_depend>saphari_task_executive</run_depend>
+  <run_depend>saphari_tool_detector</run_depend>
 
   <export>
     <metapackage/>
