--- a/saphari_task_executive/package.xml
+++ b/saphari_task_executive/package.xml
@@ -14,6 +14,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <run_depend>semrec</run_depend>
+  <run_depend>mongodb_log</run_depend>
+  <run_depend>knowrob_saphari</run_depend>
 
   <export>
 
