Added tool perception to saphari-task-executive.

--- a/saphari_task_executive/config/semrec_config.cfg
+++ b/saphari_task_executive/config/semrec_config.cfg
@@ -80,7 +80,7 @@ plugins: {
       arbitrary-mappings-file = "${PACKAGE semrec}/data/arbitrary_mappings_files/ros_signals.cfg"; },
     { plugin = "knowrob";
       json-service = "/json_prolog";
-      connection-less = true;
+      connection-less = false;
       wait-for-service-duration = -1;
       semantics-descriptor-file = "${PACKAGE semrec}/data/semantics_descriptor_files/cram_knowrob_pickandplace.cfg"; },
     { plugin = "supervisor";
