--- a/saphari_task_executive/package.xml
+++ b/saphari_task_executive/package.xml
@@ -16,6 +16,10 @@
   <build_depend>roslisp</build_depend>
   <build_depend>cram_json_prolog</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>saphari_tool_detector</build_depend>
+  <build_depend>cram_designators</build_depend>
+  <build_depend>cram_beliefstate</build_depend>
+
 
   <run_depend>semrec</run_depend>
   <run_depend>mongodb_log</run_depend>
@@ -23,6 +27,9 @@
   <run_depend>roslisp</run_depend>
   <run_depend>cram_json_prolog</run_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>cram_designators</run_depend>
+  <run_depend>cram_beliefstate</run_depend>
+  <run_depend>saphari_tool_detector</run_depend>
 
   <export>
 
