improved perception memory is freed if not used. reduced cpu load. added region of interest to service call. added learning of confidences. filter out detections that are mostly outside of the region. improved debug image drawings. added timing measurements. disabled compression by default.

--- a/saphari_tool_detector/CMakeLists.txt
+++ b/saphari_tool_detector/CMakeLists.txt
@@ -97,3 +97,7 @@ add_dependencies(detect_tools ${catkin_EXPORTED_TARGETS})
 ## Saphari training node
 add_executable(train_tool src/train_tool.cpp)
 target_link_libraries(train_tool saphari_tool_detection)
+
+## Saphari training node
+add_executable(train_confidence src/train_confidence.cpp)
+target_link_libraries(train_confidence saphari_tool_detection)
