--- a/saphari_task_executive/CMakeLists.txt
+++ b/saphari_task_executive/CMakeLists.txt
@@ -1,9 +1,18 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(saphari_task_executive)
 
-find_package(catkin REQUIRED message_generation)
+find_package(catkin REQUIRED message_generation geometry_msgs shape_msgs)
 
-generate_messages()
+add_message_files(
+  FILES
+  ObjectTypeDescription.msg
+  ObjectInstanceDescription.msg
+  SlotDescription.msg
+  SlotGoalDescription.msg
+  SlotStateDescription.msg
+  TaskState.msg)
+
+generate_messages(DEPENDENCIES geometry_msgs shape_msgs)
 
 catkin_package(
-  CATKIN_DEPENDS message_runtime)
+  CATKIN_DEPENDS message_runtime geometry_msgs shape_msgs)
