--- a/saphari_task_executive/package.xml
+++ b/saphari_task_executive/package.xml
@@ -14,6 +14,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>shape_msgs</build_depend>
   <build_depend>roslisp</build_depend>
   <build_depend>cram_json_prolog</build_depend>
   <build_depend>saphari_tool_detector</build_depend>
@@ -22,6 +24,8 @@
   <build_depend>cram_beasty</build_depend>
 
   <run_depend>message_runtime</run_depend>
+  <run_depend>geometry_msgs</run_depend>
+  <run_depend>shape_msgs</run_depend>
   <run_depend>roslisp</run_depend>
   <run_depend>cram_json_prolog</run_depend>
   <run_depend>saphari_tool_detector</run_depend>
