--- a/saphari_task_executive/CMakeLists.txt
+++ b/saphari_task_executive/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(saphari_task_executive)
 
-find_package(catkin REQUIRED message_generation geometry_msgs shape_msgs)
+find_package(catkin REQUIRED roslisp message_generation geometry_msgs shape_msgs)
 
 add_message_files(
   FILES
@@ -16,3 +16,7 @@ generate_messages(DEPENDENCIES geometry_msgs shape_msgs)
 
 catkin_package(
   CATKIN_DEPENDS message_runtime geometry_msgs shape_msgs)
+
+add_lisp_executable(humans_filter
+  saphari-humans-processing
+  saphari-humans-processing:main-humans-filter)
