--- a/saphari_kinect_server/CMakeLists.txt
+++ b/saphari_kinect_server/CMakeLists.txt
@@ -1,3 +1,10 @@
+# USE THE CATKIN CMAKELISTS FOR BUILDING WITH CATKIN
+# ELSE PROCEED WITH ROSBUILD BELOW
+if(NOT USE_ROSBUILD)
+  include(catkin.cmake)
+  return()
+endif()
+
 cmake_minimum_required(VERSION 2.4.6)
 include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
