--- a/saphari_task_executive/CMakeLists.txt
+++ b/saphari_task_executive/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(saphari_task_executive)
 
-find_package(catkin REQUIRED roslisp message_generation geometry_msgs shape_msgs)
+find_package(catkin REQUIRED roscpp roslisp message_generation geometry_msgs shape_msgs)
 
 add_message_files(
   FILES
@@ -15,7 +15,16 @@ add_message_files(
 generate_messages(DEPENDENCIES geometry_msgs shape_msgs)
 
 catkin_package(
-  CATKIN_DEPENDS message_runtime geometry_msgs shape_msgs)
+  CATKIN_DEPENDS roscpp message_runtime geometry_msgs shape_msgs)
+
+include_directories(
+  include
+  ${catkin_INCLUDE_DIRS})
+
+add_executable(humans_tf_publisher
+  src/${PROJECT_NAME}/humans_tf_publisher.cpp)
+
+target_link_libraries(humans_tf_publisher ${catkin_LIBRARIES})
 
 add_lisp_executable(humans_filter
   saphari-humans-processing
