--- a/saphari_task_executive/package.xml
+++ b/saphari_task_executive/package.xml
@@ -17,6 +17,7 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>shape_msgs</build_depend>
   <build_depend>roslisp</build_depend>
+  <build_depend>roscpp</build_depend>
   <build_depend>cram_json_prolog</build_depend>
   <build_depend>saphari_tool_detector</build_depend>
   <build_depend>cram_designators</build_depend>
@@ -27,6 +28,7 @@
   <run_depend>geometry_msgs</run_depend>
   <run_depend>shape_msgs</run_depend>
   <run_depend>roslisp</run_depend>
+  <run_depend>roscpp</run_depend>
   <run_depend>cram_json_prolog</run_depend>
   <run_depend>saphari_tool_detector</run_depend>
   <run_depend>cram_designators</run_depend>
