Fast human-viz in cpp

--- a/saphari_task_executive/CMakeLists.txt
+++ b/saphari_task_executive/CMakeLists.txt
@@ -1,7 +1,14 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(saphari_task_executive)
 
-find_package(catkin REQUIRED roscpp roslisp message_generation geometry_msgs shape_msgs)
+find_package(catkin REQUIRED 
+  roscpp 
+  roslisp 
+  message_generation 
+  geometry_msgs 
+  shape_msgs 
+  saphari_msgs 
+  visualization_msgs)
 
 add_message_files(
   FILES
@@ -15,7 +22,13 @@ add_message_files(
 generate_messages(DEPENDENCIES geometry_msgs shape_msgs)
 
 catkin_package(
-  CATKIN_DEPENDS roscpp message_runtime geometry_msgs shape_msgs)
+  CATKIN_DEPENDS 
+    roscpp 
+    message_runtime 
+    geometry_msgs 
+    shape_msgs
+    saphari_msgs
+    visualization_msgs)
 
 include_directories(
   include
@@ -25,6 +38,11 @@ add_executable(humans_tf_publisher
   src/${PROJECT_NAME}/humans_tf_publisher.cpp)
 
 target_link_libraries(humans_tf_publisher ${catkin_LIBRARIES})
+
+add_executable(fast_humans_viz
+  src/${PROJECT_NAME}/fast_humans_viz.cpp)
+
+target_link_libraries(fast_humans_viz ${catkin_LIBRARIES})
 
 add_lisp_executable(humans_filter
   saphari-humans-processing
